--- a/02-1.naver번역API-yesterday+파일번역.ipynb
+++ b/02-1.naver번역API-yesterday+파일번역.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### requests의 PreparedRequest\n",
+    "* https://docs.python-requests.org/en/latest/user/advanced/#prepared-requests\n",
+    "\n",
+    "#### List Comprehension\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -147,9 +164,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
