--- a/01python_basic.ipynb
+++ b/01python_basic.ipynb
@@ -89,8 +89,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "30da37fc-34f6-4aec-917d-472897c94e9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 16, 36, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares = []\n",
+    "for i in range(10):   \n",
+    "    if i % 2 == 0:\n",
+    "        squares.append(i * i)\n",
+    "\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3a3a2971-585d-4b14-a908-3c6d8e9ec9d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 4, 16, 36, 64]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list comprehension\n",
+    "\n",
+    "squares2 = [i*i for i in range(10) if i % 2 == 0]\n",
+    "squares2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32da6032-6239-4707-a31f-f44c3bbeb983",
    "metadata": {},
    "outputs": [],
    "source": []
