--- a/02-1.naver번역API-yesterday+파일번역.ipynb
+++ b/02-1.naver번역API-yesterday+파일번역.ipynb
@@ -7,15 +7,10 @@
     "#### requests의 PreparedRequest\n",
     "* https://docs.python-requests.org/en/latest/user/advanced/#prepared-requests\n",
     "\n",
-    "#### List Comprehension\n"
+    "#### List Comprehension\n",
+    "Pythonic Code Style 설명 \n",
+    "* https://docs.python-guide.org/writing/style/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -26,40 +21,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Yesterday all my troubles seemed so far away.\n",
-      "translated to :  어제 나의 모든 고민은 너무나 멀리 있는 것 같았다.\n",
+      "translated to :  어제는 내 모든 고민이 너무 멀리 있는 것 같았어.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Now it looks as though they're here to stay.\n",
-      "translated to :  이제 그들은 여기 머물려고 온 것 같다.\n",
+      "translated to :  이제 그들은 여기 머물려고 온 것처럼 보인다.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Oh, I believe in yesterday.\n",
       "translated to :  오, 나는 어제를 다시 그리게 돼.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Suddenly I'm not half the man I used to be.\n",
       "translated to :  갑자기 나는 예전의 절반도 되지 않았다.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  There's a shadow hanging over me.\n",
-      "translated to :  내 위에 그림자가 드리워져 있다.\n",
+      "translated to :  그림자가 드리워져 있어요.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Oh, yesterday came suddenly.\n",
-      "translated to :  아, 어제가 갑자기 왔다.\n",
+      "translated to :  아, 어제가 갑자기 왔네요.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Why she had to go, I don't know, she wouldn't say.\n",
-      "translated to :  왜 그녀가 가야 했는지는 모르겠지만, 그녀는 말하지 않았다.\n",
+      "translated to :  왜 그녀가 가야만 했는지, 모르겠어요, 그녀는 말하려 하지 않았어요.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  I said something wrong, now I long for yesterday.\n",
-      "translated to :  나는 어제를 그리워하며 말을 잘못했다.\n",
+      "translated to :  내가 잘못 말했는데, 어제가 그리워요.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Yesterday love was such an easy game to play.\n",
       "translated to :  어제는 사랑이 정말 쉬운 게임이었다.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Now I need a place to hide away.\n",
-      "translated to :  이제 숨을 곳이 필요해.\n",
+      "translated to :  이제 숨을 곳이 필요해\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Oh, I believe in yesterday.\n",
       "translated to :  오, 나는 어제를 다시 그리게 돼.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Why she had to go, I don't know, she wouldn't say.\n",
-      "translated to :  왜 그녀가 가야 했는지는 모르겠지만, 그녀는 말하지 않았다.\n",
+      "translated to :  왜 그녀가 가야만 했는지, 모르겠어요, 그녀는 말하려 하지 않았어요.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  I said something wrong, now I long for yesterday.\n",
-      "translated to :  나는 어제를 그리워하며 말을 잘못했다.\n",
+      "translated to :  내가 잘못 말했는데, 어제가 그리워요.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Yesterday love was such an easy game to play.\n",
       "translated to :  어제는 사랑이 정말 쉬운 게임이었다.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Now I need a place to hide away.\n",
-      "translated to :  이제 숨을 곳이 필요해.\n",
+      "translated to :  이제 숨을 곳이 필요해\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Oh, I believe in yesterday.\n",
       "translated to :  오, 나는 어제를 다시 그리게 돼.\n",
+      "<class 'requests.models.PreparedRequest'>\n",
       "send original text :  Mm mm mm mm mm mm mm\n",
-      "translated to :  음 mm mm mm mm mm mm mm mm\n",
+      "translated to :  mm mm mm mm mm mm\n",
       "job completed..\n"
      ]
     }
@@ -67,8 +79,8 @@
    "source": [
     "from requests import Request, Session\n",
     "\n",
-    "NAVER_CLIENT_ID = 'Zo1vTslyKxKYskf_qfUk'\n",
-    "NAVER_CLIENT_SECRET = 'X5kGpbWEbv'\n",
+    "NAVER_CLIENT_ID = 'mldU421g1Whc8Jv0wPt5'\n",
+    "NAVER_CLIENT_SECRET = 'QEctC2tbME'\n",
     "\n",
     "\n",
     "def get_text_list():\n",
@@ -76,7 +88,7 @@
     "    with open('data/yesterday.txt', 'r',encoding=\"utf8\") as file:\n",
     "        contents = file.read()\n",
     "        lists = contents.split(\"\\n\")\n",
-    "\n",
+    "    #[\"aaa\",\"bbb\",\"\",\"ddd\"]\n",
     "    return lists\n",
     "\n",
     "def save_to_file(list):\n",
@@ -84,38 +96,49 @@
     "        file.writelines(list)\n",
     "\n",
     "def main():\n",
+    "    # Session 객체생성\n",
     "    session = Session()\n",
-    "\n",
+    "    \n",
+    "    # 요청 헤더 \n",
     "    headers = {\n",
     "        'X-Naver-Client-Id': NAVER_CLIENT_ID,\n",
     "        'X-Naver-Client-Secret': NAVER_CLIENT_SECRET,\n",
     "    }\n",
+    "    # 요청 파라미터\n",
+    "    payload = {\n",
+    "        'source': 'en',\n",
+    "        'target': 'ko',\n",
+    "        #'text': en_text,\n",
+    "    }\n",
     "    url = 'https://openapi.naver.com/v1/papago/n2mt'\n",
     "\n",
     "    lists = get_text_list()\n",
+    "    # list comprehesion : empty string 은 포함하지 않음\n",
     "    lists = [ i for i in lists if len(i) != 0]\n",
     "\n",
     "    result_list = []\n",
     "    for en_text in lists:\n",
-    "        payload = {\n",
-    "            'source': 'en',\n",
-    "            'target': 'ko',\n",
-    "            'text': en_text,\n",
-    "        }\n",
+    "        payload['text'] = en_text\n",
+    "        # Request 객체생성\n",
     "        req = Request('POST', url, data=payload, headers=headers)\n",
+    "        # PrepardRequest 객체생성\n",
     "        prepared = req.prepare()\n",
+    "        print(type(prepared))\n",
     "\n",
+    "        # request를 보내고 Response 객체 생성\n",
     "        res = session.send(prepared)\n",
+    "        \n",
     "        print('send original text : ', en_text)\n",
     "        ko_text = ''\n",
     "        \n",
+    "        # Exception 처리\n",
     "        try:\n",
     "            ko_text = res.json()['message']['result']['translatedText']\n",
+    "            print('translated to : ', ko_text)\n",
     "        except Exception as err:\n",
     "            print('에러 발생 ',res.json())\n",
     "            break\n",
     "\n",
-    "        print('translated to : ', ko_text)\n",
     "        result_list.append(en_text+ '\\n')\n",
     "        result_list.append(ko_text + '\\n')\n",
     "\n",
