--- a/01python_basic.ipynb
+++ b/01python_basic.ipynb
@@ -135,12 +135,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "943492dc-2f57-4a4a-9e16-89ed2c072311",
+   "metadata": {},
+   "source": [
+    "### 파이썬의 자료구조\n",
+    "* Dict { } : key=value\n",
+    "* List [ ] : 배열\n",
+    "* Tuple ( ) : Read Only 배열\n",
+    "* Set  : 중복을 허용하지 않는 배열"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "32da6032-6239-4707-a31f-f44c3bbeb983",
+   "execution_count": 22,
+   "id": "78ddd84a-182d-4256-8205-c1c644d2629c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_dict = {'name':'파이썬'}\n",
+    "my_dict2 = dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5c854285-4b2e-46fd-9ef9-5cc6f61a3a90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'> <class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(my_dict), type(my_dict2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "99d1bf59-d238-4cd4-b824-da01564299aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "파이썬\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'name' in my_dict:\n",
+    "    print(my_dict['name'])    \n",
+    "else:\n",
+    "    print('key not found')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "7d151ba9-7b39-4268-8b22-9643c594706c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "key not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "value = my_dict.get('name1')\n",
+    "print(value)\n",
+    "if value is None:\n",
+    "    print('key not found')\n",
+    "else:\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "83092b2a-4795-4348-9293-88179032a782",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': '파이썬', 'addr': '주소'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict['addr']='주소'\n",
+    "print(my_dict)"
+   ]
   }
  ],
  "metadata": {
