--- a/04기상청날씨데이터.ipynb
+++ b/04기상청날씨데이터.ipynb
@@ -1,12 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "38d9dc1b-d5f0-4f99-9040-7dea2f777ed9",
+   "metadata": {},
+   "source": [
+    "### 기상청 날씨 데이터 파싱\n",
+    "* BeautifulSoup의 find(), find_all(), select() , select_one() 비교 \n",
+    "* 파싱한 데이터를 dict, list에 저장\n",
+    "* 자료구조에 저장된 데이터를 json 파일로 저장하기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a179593d-e7b0-4dac-8876-3d219a60f3ab",
+   "id": "5c5f94f8-ec47-45cc-a585-2e4c9b9810c8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests"
+   ]
   }
  ],
  "metadata": {
