--- a/05행정구역정보분석.ipynb
+++ b/05행정구역정보분석.ipynb
@@ -1579,7 +1579,7 @@
     }
    ],
    "source": [
-    "#loc[] 사용\n",
+    "ㅊ\n",
     "#인덱스가 20 부터 22까지 컬럼이 인구수부터 광역시도 까지\n",
     "data.loc[20:25, '인구수':'광역시도']"
    ]
@@ -1687,6 +1687,79 @@
     "#iloc[] 사용\n",
     "#인덱스가 20 부터 25까지 컬럼이 인구수부터 광역시도 까지\n",
     "data.iloc[20:25,1:7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2d5343f3-86a9-4073-bf10-04e5f7025080",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>인구수</th>\n",
+       "      <th>광역시도</th>\n",
+       "      <th>행정구역</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>915005</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>용인시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>106388</td>\n",
+       "      <td>경상남도</td>\n",
+       "      <td>사천시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>56734</td>\n",
+       "      <td>경상남도</td>\n",
+       "      <td>창녕군</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       인구수  광역시도 행정구역\n",
+       "40  915005   경기도  용인시\n",
+       "55  106388  경상남도  사천시\n",
+       "60   56734  경상남도  창녕군"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#loc[] 사용\n",
+    "#index가 40,55,60 이고, column이 인구수,광역시도,행정구역\n",
+    "data.loc[[40,55,60],['인구수','광역시도','행정구역']]"
    ]
   }
  ],
