--- a/05행정구역정보분석.ipynb
+++ b/05행정구역정보분석.ipynb
@@ -1761,6 +1761,34 @@
     "#index가 40,55,60 이고, column이 인구수,광역시도,행정구역\n",
     "data.loc[[40,55,60],['인구수','광역시도','행정구역']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "85d5eb01-7d31-4e93-bc05-54c2797e2bed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "211089.77729257641\n",
+      "211090\n",
+      "211089.78\n"
+     ]
+    }
+   ],
+   "source": [
+    "#인구수가 전국평균 보다 작은 지역(인구수,행정구역,광역시도)을 선택해서 결과를 엑셀파일로 저장하기\n",
+    "pop_mean_value=data['인구수'].mean()\n",
+    "print(pop_mean_value)\n",
+    "print(round(pop_mean_value))\n",
+    "print(f'{pop_mean_value:.2f}')\n",
+    "pop_mean_lt_df = data.loc[data['인구수'] < pop_mean_value,['광역시도','행정구역','인구수']].sort_values(by='인구수',ascending=False)\\\n",
+    ".reset_index(drop=True)\n",
+    "#excel 파일로 저장\n",
+    "pop_mean_lt_df.to_excel('data/평균인구수미만지역.xlsx')"
+   ]
   }
  ],
  "metadata": {
