--- a/05행정구역정보분석.ipynb
+++ b/05행정구역정보분석.ipynb
@@ -2099,6 +2099,75 @@
     "#경기도의 면적과 인구수의 상관계수 구하기\n",
     "gy_df['면적'].corr(gy_df['인구수'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "bed7b75d-7cf3-423c-8d7b-a9f47e77cedc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "인구수           202520\n",
+       "shortName         강릉\n",
+       "x                 11\n",
+       "y                  4\n",
+       "면적           1040.07\n",
+       "광역시도             강원도\n",
+       "행정구역             강릉시\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#인덱스가 0인 행 하나만 선택\n",
+    "print(type(data.loc[0]))\n",
+    "data.loc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7130503-3fa0-40af-8be8-8cc1e7e52d92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#열 하나만 선택\n",
+    "data.loc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48dbd020-6707-4674-9e68-c29b0afaea85",
+   "metadata": {},
+   "source": [
+    "### GroupBy 기능 사용하기\n",
+    "* 광역시도별 인구수의 합계\n",
+    "* ~별에 해당하는 컬럼명이나 컬럼값을 groupby() 함수의 인자로 전달한다. \n",
+    "* Series 객체의 groupby() 함수는 컬럼의 값을 인자로 전달하고, DataFrame 객체의 groupby() 함수는 컬럼명을 인자로 전달합니다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb9932f2-c8bb-4d38-9b39-d03baf4afcc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
   }
  ],
  "metadata": {
