--- a/05행정구역정보분석.ipynb
+++ b/05행정구역정보분석.ipynb
@@ -2139,13 +2139,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "b7130503-3fa0-40af-8be8-8cc1e7e52d92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "seq\n",
+       "0      1040.07\n",
+       "1       664.19\n",
+       "2       180.01\n",
+       "3      1185.80\n",
+       "4       105.25\n",
+       "        ...   \n",
+       "224     882.47\n",
+       "225      81.84\n",
+       "226     406.08\n",
+       "227     932.51\n",
+       "228     983.70\n",
+       "Name: 면적, Length: 229, dtype: float64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#열 하나만 선택\n",
-    "data.loc"
+    "print(type(data['면적']))\n",
+    "data['면적']"
    ]
   },
   {
@@ -2161,12 +2192,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "cb9932f2-c8bb-4d38-9b39-d03baf4afcc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "광역시도\n",
+       "강원도         1429438\n",
+       "경기도        11744210\n",
+       "경상남도        3144487\n",
+       "경상북도        2508964\n",
+       "광주광역시       1438209\n",
+       "대구광역시       2378450\n",
+       "대전광역시       1467677\n",
+       "부산광역시       3323591\n",
+       "서울특별시       9394807\n",
+       "세종특별자치시      191233\n",
+       "울산광역시       1105585\n",
+       "인천광역시       2766575\n",
+       "전라남도        1700563\n",
+       "전라북도        1739048\n",
+       "제주특별자치도      575873\n",
+       "충청남도        1946129\n",
+       "충청북도        1484720\n",
+       "Name: 인구수, dtype: int64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#"
+    "# Series 객체 사용 - 광역시도별 인구수의 합계 \n",
+    "# SeriesGroupBy object\n",
+    "data['인구수'].groupby(data['광역시도']).sum().sort_values()"
    ]
   }
  ],
