--- a/05행정구역정보분석.ipynb
+++ b/05행정구역정보분석.ipynb
@@ -2430,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "id": "d4417ed8-48a9-4f81-9d1c-39927938a8b7",
    "metadata": {},
    "outputs": [
@@ -2458,13 +2458,48 @@
        "Name: 인구수, dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.groupby('광역시도')['인구수'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "aba01a3d-68c8-4326-821b-456bf032fdd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "광역시도  행정구역\n",
+       "강원도   강릉시     202520\n",
+       "      고성군      25589\n",
+       "      동해시      86747\n",
+       "      삼척시      63986\n",
+       "      속초시      76733\n",
+       "               ...  \n",
+       "충청북도  제천시     127462\n",
+       "      증평군      34480\n",
+       "      진천군      62809\n",
+       "      청주시     790216\n",
+       "      충주시     198077\n",
+       "Name: 인구수, Length: 229, dtype: int64"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#광역시도별, 행정구역별 인구수의 합계\n",
+    "groupby_df = data.groupby(['광역시도','행정구역'])['인구수'].sum()\n",
+    "groupby_df.to_excel('data/광역시도')"
    ]
   }
  ],
