--- a/05행정구역정보분석.ipynb
+++ b/05행정구역정보분석.ipynb
@@ -2469,37 +2469,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "id": "aba01a3d-68c8-4326-821b-456bf032fdd6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "광역시도  행정구역\n",
-       "강원도   강릉시     202520\n",
-       "      고성군      25589\n",
-       "      동해시      86747\n",
-       "      삼척시      63986\n",
-       "      속초시      76733\n",
-       "               ...  \n",
-       "충청북도  제천시     127462\n",
-       "      증평군      34480\n",
-       "      진천군      62809\n",
-       "      청주시     790216\n",
-       "      충주시     198077\n",
-       "Name: 인구수, Length: 229, dtype: int64"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#광역시도별, 행정구역별 인구수의 합계\n",
     "groupby_df = data.groupby(['광역시도','행정구역'])['인구수'].sum()\n",
-    "groupby_df.to_excel('data/광역시도')"
+    "groupby_df.to_excel('data/광역시도별행정구역별인구수의합계.xlsx', sheet_name='인구수')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c4a179f-28e8-487e-afa3-90230d03e32e",
+   "metadata": {},
+   "source": [
+    "#### 엑셀 수치데이터에 콤마찍기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3553fd5-c354-4aaa-8210-61d74fb0ca59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " Create a Pandas Excel writer using XlsxWriter as the engine.\n",
+    "writer = pd.ExcelWriter('data/광역시도별인구수의합계1.xlsx', engine='xlsxwriter')\n",
+    "\n",
+    "# Convert the dataframe to an XlsxWriter Excel object.\n",
+    "groupby_df.to_excel(writer, sheet_name='인구수합계')\n",
+    "\n",
+    "# Get the xlsxwriter workbook and worksheet objects.\n",
+    "workbook  = writer.book\n",
+    "worksheet = writer.sheets['인구수합계']\n",
+    "\n",
+    "# Set a currency number format for a column.\n",
+    "num_format = workbook.add_format({'num_format': '#,###'})\n",
+    "worksheet.set_column('C:C', None, num_format)\n",
+    "\n",
+    "# Close the Pandas Excel writer and output the Excel file.\n",
+    "writer.save()"
    ]
   }
  ],
