--- a/06Melon100Chart.ipynb
+++ b/06Melon100Chart.ipynb
@@ -28,15 +28,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "83396df7-1b47-4dfe-a125-74cd5b0ecdf4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "100\n",
+      "100\n",
+      "javascript:melon.play.playSong('1000002721',34752700);\n",
+      "javascript:melon.play.playSong('1000002721',34626109);\n",
+      "javascript:melon.play.playSong('1000002721',34061322);\n",
+      "javascript:melon.play.playSong('1000002721',34701627);\n",
+      "javascript:melon.play.playSong('1000002721',34431086);\n",
+      "javascript:melon.play.playSong('1000002721',34657844);\n",
+      "javascript:melon.play.playSong('1000002721',34668619);\n",
+      "javascript:melon.play.playSong('1000002721',34754292);\n",
+      "javascript:melon.play.playSong('1000002721',33808429);\n",
+      "javascript:melon.play.playSong('1000002721',34599917);\n",
+      "javascript:melon.play.playSong('1000002721',34349913);\n",
+      "javascript:melon.play.playSong('1000002721',32508053);\n",
+      "javascript:melon.play.playSong('1000002721',34538515);\n",
+      "javascript:melon.play.playSong('1000002721',34632789);\n",
+      "javascript:melon.play.playSong('1000002721',33496587);\n",
+      "javascript:melon.play.playSong('1000002721',34256568);\n",
+      "javascript:melon.play.playSong('1000002721',34494149);\n",
+      "javascript:melon.play.playSong('1000002721',33480898);\n",
+      "javascript:melon.play.playSong('1000002721',33514925);\n",
+      "javascript:melon.play.playSong('1000002721',34701996);\n",
+      "javascript:melon.play.playSong('1000002721',33652821);\n",
+      "javascript:melon.play.playSong('1000002721',33658563);\n",
+      "javascript:melon.play.playSong('1000002721',33337651);\n",
+      "javascript:melon.play.playSong('1000002721',34298499);\n",
+      "javascript:melon.play.playSong('1000002721',34535898);\n",
+      "javascript:melon.play.playSong('1000002721',34360855);\n",
+      "javascript:melon.play.playSong('1000002721',33036660);\n",
+      "javascript:melon.play.playSong('1000002721',33606505);\n",
+      "javascript:melon.play.playSong('1000002721',33487342);\n",
+      "javascript:melon.play.playSong('1000002721',33630420);\n",
+      "javascript:melon.play.playSong('1000002721',34398735);\n",
+      "javascript:melon.play.playSong('1000002721',34101563);\n",
+      "javascript:melon.play.playSong('1000002721',34481680);\n",
+      "javascript:melon.play.playSong('1000002721',34436674);\n",
+      "javascript:melon.play.playSong('1000002721',33599821);\n",
+      "javascript:melon.play.playSong('1000002721',33655994);\n",
+      "javascript:melon.play.playSong('1000002721',33507137);\n",
+      "javascript:melon.play.playSong('1000002721',32872978);\n",
+      "javascript:melon.play.playSong('1000002721',34701816);\n",
+      "javascript:melon.play.playSong('1000002721',33978183);\n",
+      "javascript:melon.play.playSong('1000002721',33666269);\n",
+      "javascript:melon.play.playSong('1000002721',34041584);\n",
+      "javascript:melon.play.playSong('1000002721',34667573);\n",
+      "javascript:melon.play.playSong('1000002721',33625988);\n",
+      "javascript:melon.play.playSong('1000002721',34540831);\n",
+      "javascript:melon.play.playSong('1000002721',34726097);\n",
+      "javascript:melon.play.playSong('1000002721',34481682);\n",
+      "javascript:melon.play.playSong('1000002721',34298496);\n",
+      "javascript:melon.play.playSong('1000002721',32698101);\n",
+      "javascript:melon.play.playSong('1000002721',33372781);\n",
+      "javascript:melon.play.playSong('1000002721',34622559);\n",
+      "javascript:melon.play.playSong('1000002721',34373632);\n",
+      "javascript:melon.play.playSong('1000002721',31254010);\n",
+      "javascript:melon.play.playSong('1000002721',33998510);\n",
+      "javascript:melon.play.playSong('1000002721',34461065);\n",
+      "javascript:melon.play.playSong('1000002721',33239419);\n",
+      "javascript:melon.play.playSong('1000002721',33448767);\n",
+      "javascript:melon.play.playSong('1000002721',34399272);\n",
+      "javascript:melon.play.playSong('1000002721',33976677);\n",
+      "javascript:melon.play.playSong('1000002721',34495462);\n",
+      "javascript:melon.play.playSong('1000002721',34634791);\n",
+      "javascript:melon.play.playSong('1000002721',34752959);\n",
+      "javascript:melon.play.playSong('1000002721',33359725);\n",
+      "javascript:melon.play.playSong('1000002721',34754767);\n",
+      "javascript:melon.play.playSong('1000002721',30244931);\n",
+      "javascript:melon.play.playSong('1000002721',34592758);\n",
+      "javascript:melon.play.playSong('1000002721',33503722);\n",
+      "javascript:melon.play.playSong('1000002721',34397419);\n",
+      "javascript:melon.play.playSong('1000002721',33623210);\n",
+      "javascript:melon.play.playSong('1000002721',33061995);\n",
+      "javascript:melon.play.playSong('1000002721',34748459);\n",
+      "javascript:melon.play.playSong('1000002721',33725775);\n",
+      "javascript:melon.play.playSong('1000002721',4446485);\n",
+      "javascript:melon.play.playSong('1000002721',30962526);\n",
+      "javascript:melon.play.playSong('1000002721',32183386);\n",
+      "javascript:melon.play.playSong('1000002721',34632361);\n",
+      "javascript:melon.play.playSong('1000002721',32061975);\n",
+      "javascript:melon.play.playSong('1000002721',33359309);\n",
+      "javascript:melon.play.playSong('1000002721',3414749);\n",
+      "javascript:melon.play.playSong('1000002721',34366006);\n",
+      "javascript:melon.play.playSong('1000002721',34694005);\n",
+      "javascript:melon.play.playSong('1000002721',3699046);\n",
+      "javascript:melon.play.playSong('1000002721',30287019);\n",
+      "javascript:melon.play.playSong('1000002721',34662306);\n",
+      "javascript:melon.play.playSong('1000002721',33868791);\n",
+      "javascript:melon.play.playSong('1000002721',34755406);\n",
+      "javascript:melon.play.playSong('1000002721',34752772);\n",
+      "javascript:melon.play.playSong('1000002721',31737197);\n",
+      "javascript:melon.play.playSong('1000002721',31853557);\n",
+      "javascript:melon.play.playSong('1000002721',34753327);\n",
+      "javascript:melon.play.playSong('1000002721',33248758);\n",
+      "javascript:melon.play.playSong('1000002721',33464805);\n",
+      "javascript:melon.play.playSong('1000002721',34331506);\n",
+      "javascript:melon.play.playSong('1000002721',34326186);\n",
+      "javascript:melon.play.playSong('1000002721',34215821);\n",
+      "javascript:melon.play.playSong('1000002721',33167063);\n",
+      "javascript:melon.play.playSong('1000002721',34513916);\n",
+      "javascript:melon.play.playSong('1000002721',34215822);\n",
+      "javascript:melon.play.playSong('1000002721',32794652);\n",
+      "javascript:melon.play.playSong('1000002721',34626110);\n"
+     ]
+    }
+   ],
    "source": [
     "url = 'https://www.melon.com/chart/index.htm'\n",
     "req_header = {\n",
-    "    'user-agent':''\n",
-    "}"
+    "    'user-agent':'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/99.0.4844.51 Safari/537.36'\n",
+    "}\n",
+    "\n",
+    "res = requests.get(url, headers=req_header)\n",
+    "print(res.status_code)\n",
+    "if res.ok:\n",
+    "    soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "    print(len(soup.select(\"a[href*='playSong']\")))\n",
+    "    print(len(soup.select(\"div#tb_list tr a[href*='playSong']\")))\n",
+    "    a_tags = soup.select(\"a[href*='playSong']\")\n",
+    "    \n",
+    "    song_list = []\n",
+    "    for idx,a_tag in enumerate(a_tags,1):\n",
+    "        song_title = a_tag.text\n",
+    "        #print(idx, type(a_tag), a_tag, song_title)\n",
+    "        href_value = a_tag['href']\n",
+    "        print(href_value)"
    ]
   }
  ],
