--- a/06Melon100Chart.ipynb
+++ b/06Melon100Chart.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "83396df7-1b47-4dfe-a125-74cd5b0ecdf4",
    "metadata": {},
    "outputs": [
@@ -38,108 +38,124 @@
      "text": [
       "200\n",
       "100\n",
-      "100\n",
-      "javascript:melon.play.playSong('1000002721',34752700);\n",
-      "javascript:melon.play.playSong('1000002721',34626109);\n",
-      "javascript:melon.play.playSong('1000002721',34061322);\n",
-      "javascript:melon.play.playSong('1000002721',34701627);\n",
-      "javascript:melon.play.playSong('1000002721',34431086);\n",
-      "javascript:melon.play.playSong('1000002721',34657844);\n",
-      "javascript:melon.play.playSong('1000002721',34668619);\n",
-      "javascript:melon.play.playSong('1000002721',34754292);\n",
-      "javascript:melon.play.playSong('1000002721',33808429);\n",
-      "javascript:melon.play.playSong('1000002721',34599917);\n",
-      "javascript:melon.play.playSong('1000002721',34349913);\n",
-      "javascript:melon.play.playSong('1000002721',32508053);\n",
-      "javascript:melon.play.playSong('1000002721',34538515);\n",
-      "javascript:melon.play.playSong('1000002721',34632789);\n",
-      "javascript:melon.play.playSong('1000002721',33496587);\n",
-      "javascript:melon.play.playSong('1000002721',34256568);\n",
-      "javascript:melon.play.playSong('1000002721',34494149);\n",
-      "javascript:melon.play.playSong('1000002721',33480898);\n",
-      "javascript:melon.play.playSong('1000002721',33514925);\n",
-      "javascript:melon.play.playSong('1000002721',34701996);\n",
-      "javascript:melon.play.playSong('1000002721',33652821);\n",
-      "javascript:melon.play.playSong('1000002721',33658563);\n",
-      "javascript:melon.play.playSong('1000002721',33337651);\n",
-      "javascript:melon.play.playSong('1000002721',34298499);\n",
-      "javascript:melon.play.playSong('1000002721',34535898);\n",
-      "javascript:melon.play.playSong('1000002721',34360855);\n",
-      "javascript:melon.play.playSong('1000002721',33036660);\n",
-      "javascript:melon.play.playSong('1000002721',33606505);\n",
-      "javascript:melon.play.playSong('1000002721',33487342);\n",
-      "javascript:melon.play.playSong('1000002721',33630420);\n",
-      "javascript:melon.play.playSong('1000002721',34398735);\n",
-      "javascript:melon.play.playSong('1000002721',34101563);\n",
-      "javascript:melon.play.playSong('1000002721',34481680);\n",
-      "javascript:melon.play.playSong('1000002721',34436674);\n",
-      "javascript:melon.play.playSong('1000002721',33599821);\n",
-      "javascript:melon.play.playSong('1000002721',33655994);\n",
-      "javascript:melon.play.playSong('1000002721',33507137);\n",
-      "javascript:melon.play.playSong('1000002721',32872978);\n",
-      "javascript:melon.play.playSong('1000002721',34701816);\n",
-      "javascript:melon.play.playSong('1000002721',33978183);\n",
-      "javascript:melon.play.playSong('1000002721',33666269);\n",
-      "javascript:melon.play.playSong('1000002721',34041584);\n",
-      "javascript:melon.play.playSong('1000002721',34667573);\n",
-      "javascript:melon.play.playSong('1000002721',33625988);\n",
-      "javascript:melon.play.playSong('1000002721',34540831);\n",
-      "javascript:melon.play.playSong('1000002721',34726097);\n",
-      "javascript:melon.play.playSong('1000002721',34481682);\n",
-      "javascript:melon.play.playSong('1000002721',34298496);\n",
-      "javascript:melon.play.playSong('1000002721',32698101);\n",
-      "javascript:melon.play.playSong('1000002721',33372781);\n",
-      "javascript:melon.play.playSong('1000002721',34622559);\n",
-      "javascript:melon.play.playSong('1000002721',34373632);\n",
-      "javascript:melon.play.playSong('1000002721',31254010);\n",
-      "javascript:melon.play.playSong('1000002721',33998510);\n",
-      "javascript:melon.play.playSong('1000002721',34461065);\n",
-      "javascript:melon.play.playSong('1000002721',33239419);\n",
-      "javascript:melon.play.playSong('1000002721',33448767);\n",
-      "javascript:melon.play.playSong('1000002721',34399272);\n",
-      "javascript:melon.play.playSong('1000002721',33976677);\n",
-      "javascript:melon.play.playSong('1000002721',34495462);\n",
-      "javascript:melon.play.playSong('1000002721',34634791);\n",
-      "javascript:melon.play.playSong('1000002721',34752959);\n",
-      "javascript:melon.play.playSong('1000002721',33359725);\n",
-      "javascript:melon.play.playSong('1000002721',34754767);\n",
-      "javascript:melon.play.playSong('1000002721',30244931);\n",
-      "javascript:melon.play.playSong('1000002721',34592758);\n",
-      "javascript:melon.play.playSong('1000002721',33503722);\n",
-      "javascript:melon.play.playSong('1000002721',34397419);\n",
-      "javascript:melon.play.playSong('1000002721',33623210);\n",
-      "javascript:melon.play.playSong('1000002721',33061995);\n",
-      "javascript:melon.play.playSong('1000002721',34748459);\n",
-      "javascript:melon.play.playSong('1000002721',33725775);\n",
-      "javascript:melon.play.playSong('1000002721',4446485);\n",
-      "javascript:melon.play.playSong('1000002721',30962526);\n",
-      "javascript:melon.play.playSong('1000002721',32183386);\n",
-      "javascript:melon.play.playSong('1000002721',34632361);\n",
-      "javascript:melon.play.playSong('1000002721',32061975);\n",
-      "javascript:melon.play.playSong('1000002721',33359309);\n",
-      "javascript:melon.play.playSong('1000002721',3414749);\n",
-      "javascript:melon.play.playSong('1000002721',34366006);\n",
-      "javascript:melon.play.playSong('1000002721',34694005);\n",
-      "javascript:melon.play.playSong('1000002721',3699046);\n",
-      "javascript:melon.play.playSong('1000002721',30287019);\n",
-      "javascript:melon.play.playSong('1000002721',34662306);\n",
-      "javascript:melon.play.playSong('1000002721',33868791);\n",
-      "javascript:melon.play.playSong('1000002721',34755406);\n",
-      "javascript:melon.play.playSong('1000002721',34752772);\n",
-      "javascript:melon.play.playSong('1000002721',31737197);\n",
-      "javascript:melon.play.playSong('1000002721',31853557);\n",
-      "javascript:melon.play.playSong('1000002721',34753327);\n",
-      "javascript:melon.play.playSong('1000002721',33248758);\n",
-      "javascript:melon.play.playSong('1000002721',33464805);\n",
-      "javascript:melon.play.playSong('1000002721',34331506);\n",
-      "javascript:melon.play.playSong('1000002721',34326186);\n",
-      "javascript:melon.play.playSong('1000002721',34215821);\n",
-      "javascript:melon.play.playSong('1000002721',33167063);\n",
-      "javascript:melon.play.playSong('1000002721',34513916);\n",
-      "javascript:melon.play.playSong('1000002721',34215822);\n",
-      "javascript:melon.play.playSong('1000002721',32794652);\n",
-      "javascript:melon.play.playSong('1000002721',34626110);\n"
+      "100\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'song_title': 'GANADARA (Feat. 아이유)', 'song_id': '34752700'},\n",
+       " {'song_title': 'INVU', 'song_id': '34626109'},\n",
+       " {'song_title': '사랑은 늘 도망가', 'song_id': '34061322'},\n",
+       " {'song_title': '듣고 싶을까', 'song_id': '34701627'},\n",
+       " {'song_title': '취중고백', 'song_id': '34431086'},\n",
+       " {'song_title': '사랑인가 봐', 'song_id': '34657844'},\n",
+       " {'song_title': 'RUN2U', 'song_id': '34668619'},\n",
+       " {'song_title': 'TOMBOY', 'song_id': '34754292'},\n",
+       " {'song_title': 'abcdefu', 'song_id': '33808429'},\n",
+       " {'song_title': '언제나 사랑해', 'song_id': '34599917'},\n",
+       " {'song_title': 'ELEVEN', 'song_id': '34349913'},\n",
+       " {'song_title': '이제 나만 믿어요', 'song_id': '32508053'},\n",
+       " {'song_title': 'SMILEY (Feat. BIBI)', 'song_id': '34538515'},\n",
+       " {'song_title': '너, 너 (N번째 연애 X 휘인 (Whee In))', 'song_id': '34632789'},\n",
+       " {'song_title': '다정히 내 이름을 부르면', 'song_id': '33496587'},\n",
+       " {'song_title': '회전목마 (Feat. Zion.T, 원슈타인) (Prod. Slom)',\n",
+       "  'song_id': '34256568'},\n",
+       " {'song_title': 'Step Back', 'song_id': '34494149'},\n",
+       " {'song_title': '신호등', 'song_id': '33480898'},\n",
+       " {'song_title': '다시 사랑한다면 (김필 Ver.)', 'song_id': '33514925'},\n",
+       " {'song_title': '어제처럼', 'song_id': '34701996'},\n",
+       " {'song_title': '그대라는 사치', 'song_id': '33652821'},\n",
+       " {'song_title': 'STAY', 'song_id': '33658563'},\n",
+       " {'song_title': '별빛 같은 나의 사랑아', 'song_id': '33337651'},\n",
+       " {'song_title': '리무진 (Feat. MINO) (Prod. GRAY)', 'song_id': '34298499'},\n",
+       " {'song_title': '호랑수월가', 'song_id': '34535898'},\n",
+       " {'song_title': '눈이 오잖아(Feat.헤이즈)', 'song_id': '34360855'},\n",
+       " {'song_title': 'HERO', 'song_id': '33036660'},\n",
+       " {'song_title': '잊었니', 'song_id': '33606505'},\n",
+       " {'song_title': 'Next Level', 'song_id': '33487342'},\n",
+       " {'song_title': '끝사랑', 'song_id': '33630420'},\n",
+       " {'song_title': 'Counting Stars (Feat. Beenzino)', 'song_id': '34398735'},\n",
+       " {'song_title': 'strawberry moon', 'song_id': '34101563'},\n",
+       " {'song_title': '드라마', 'song_id': '34481680'},\n",
+       " {'song_title': 'Dreams Come True', 'song_id': '34436674'},\n",
+       " {'song_title': 'Bk Love', 'song_id': '33599821'},\n",
+       " {'song_title': 'Weekend', 'song_id': '33655994'},\n",
+       " {'song_title': 'Butter', 'song_id': '33507137'},\n",
+       " {'song_title': 'Dynamite', 'song_id': '32872978'},\n",
+       " {'song_title': '존재만으로', 'song_id': '34701816'},\n",
+       " {'song_title': '너를 생각해', 'song_id': '33978183'},\n",
+       " {'song_title': 'Permission to Dance', 'song_id': '33666269'},\n",
+       " {'song_title': 'Savage', 'song_id': '34041584'},\n",
+       " {'song_title': '노래 (The Song)', 'song_id': '34667573'},\n",
+       " {'song_title': '바라만 본다', 'song_id': '33625988'},\n",
+       " {'song_title': \"Can't Control Myself\", 'song_id': '34540831'},\n",
+       " {'song_title': '내 생에 아름다운', 'song_id': '34726097'},\n",
+       " {'song_title': '겨울잠', 'song_id': '34481682'},\n",
+       " {'song_title': '만남은 쉽고 이별은 어려워 (Feat. Leellamarz) (Prod. TOIL)',\n",
+       "  'song_id': '34298496'},\n",
+       " {'song_title': 'OHAYO MY NIGHT', 'song_id': '32698101'},\n",
+       " {'song_title': '라일락', 'song_id': '33372781'},\n",
+       " {'song_title': '잊을 수 있을까', 'song_id': '34622559'},\n",
+       " {'song_title': '서랍', 'song_id': '34373632'},\n",
+       " {'song_title': '계단말고 엘리베이터', 'song_id': '31254010'},\n",
+       " {'song_title': 'My Universe', 'song_id': '33998510'},\n",
+       " {'song_title': 'Christmas Tree', 'song_id': '34461065'},\n",
+       " {'song_title': 'Celebrity', 'song_id': '33239419'},\n",
+       " {'song_title': '문득', 'song_id': '33448767'},\n",
+       " {'song_title': '우리가 헤어져야 했던 이유', 'song_id': '34399272'},\n",
+       " {'song_title': '찰나가 영원이 될 때 (The Eternal Moment)', 'song_id': '33976677'},\n",
+       " {'song_title': '언덕나무', 'song_id': '34495462'},\n",
+       " {'song_title': '그래서 그래 (Feat. 윤하)', 'song_id': '34634791'},\n",
+       " {'song_title': '사랑인걸', 'song_id': '34752959'},\n",
+       " {'song_title': '사이렌 Remix (Feat. UNEDUCATED KID, Paul Blanco)',\n",
+       "  'song_id': '33359725'},\n",
+       " {'song_title': 'Thank You', 'song_id': '34754767'},\n",
+       " {'song_title': '봄날', 'song_id': '30244931'},\n",
+       " {'song_title': '너 아니면 안돼', 'song_id': '34592758'},\n",
+       " {'song_title': '헤픈 우연', 'song_id': '33503722'},\n",
+       " {'song_title': '흰눈', 'song_id': '34397419'},\n",
+       " {'song_title': 'Bad Habits', 'song_id': '33623210'},\n",
+       " {'song_title': '밤하늘의 별을(2020)', 'song_id': '33061995'},\n",
+       " {'song_title': '꽃 (With 김민석 of 멜로망스)', 'song_id': '34748459'},\n",
+       " {'song_title': '낙하 (with 아이유)', 'song_id': '33725775'},\n",
+       " {'song_title': '너의 모든 순간', 'song_id': '4446485'},\n",
+       " {'song_title': '모든 날, 모든 순간 (Every day, Every Moment)',\n",
+       "  'song_id': '30962526'},\n",
+       " {'song_title': 'Blueming', 'song_id': '32183386'},\n",
+       " {'song_title': 'Starlight', 'song_id': '34632361'},\n",
+       " {'song_title': '어떻게 이별까지 사랑하겠어, 널 사랑하는 거지', 'song_id': '32061975'},\n",
+       " {'song_title': 'Off My Face', 'song_id': '33359309'},\n",
+       " {'song_title': '내 손을 잡아', 'song_id': '3414749'},\n",
+       " {'song_title': '네가 없는 밤 (Feat. ASH ISLAND) (Prod. GRAY)',\n",
+       "  'song_id': '34366006'},\n",
+       " {'song_title': '손을 잡는다거나, 같이 걷는다거나', 'song_id': '34694005'},\n",
+       " {'song_title': \"Stronger (What Doesn't Kill You)\", 'song_id': '3699046'},\n",
+       " {'song_title': \"롤린 (Rollin')\", 'song_id': '30287019'},\n",
+       " {'song_title': '아주, 천천히', 'song_id': '34662306'},\n",
+       " {'song_title': '고백', 'song_id': '33868791'},\n",
+       " {'song_title': '이렇게 둘이', 'song_id': '34755406'},\n",
+       " {'song_title': 'With', 'song_id': '34752772'},\n",
+       " {'song_title': '작은 것들을 위한 시 (Boy With Luv) (Feat. Halsey)',\n",
+       "  'song_id': '31737197'},\n",
+       " {'song_title': '오늘도 빛나는 너에게 (To You My Light) (Feat.이라온)',\n",
+       "  'song_id': '31853557'},\n",
+       " {'song_title': '우린 어떠한 별보다 빛날 거야', 'song_id': '34753327'},\n",
+       " {'song_title': '추억은 만남보다 이별에 남아', 'song_id': '33248758'},\n",
+       " {'song_title': 'Dun Dun Dance', 'song_id': '33464805'},\n",
+       " {'song_title': '불협화음 (Feat. AKMU) (Prod. GRAY)', 'song_id': '34331506'},\n",
+       " {'song_title': '그게 더 편할 것 같아 (N번째 연애 X 멜로망스)', 'song_id': '34326186'},\n",
+       " {'song_title': 'Wake Up (Prod. 코드 쿤스트)', 'song_id': '34215821'},\n",
+       " {'song_title': '밝게 빛나는 별이 되어 비춰줄게', 'song_id': '33167063'},\n",
+       " {'song_title': '사랑이 아니었다고 말하지 마요', 'song_id': '34513916'},\n",
+       " {'song_title': '쉬어 (Feat. MINO) (Prod. GRAY)', 'song_id': '34215822'},\n",
+       " {'song_title': '취기를 빌려 (취향저격 그녀 X 산들)', 'song_id': '32794652'},\n",
+       " {'song_title': '그런 밤 (Some Nights)', 'song_id': '34626110'}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -156,12 +172,25 @@
     "    print(len(soup.select(\"div#tb_list tr a[href*='playSong']\")))\n",
     "    a_tags = soup.select(\"a[href*='playSong']\")\n",
     "    \n",
+    "    # 100곡의 songs 정보를 저장할 List\n",
     "    song_list = []\n",
     "    for idx,a_tag in enumerate(a_tags,1):\n",
+    "        # 1곡의 song 정보를 저장할 dict\n",
+    "        song_dict = {}\n",
     "        song_title = a_tag.text\n",
+    "        song_dict['song_title'] = song_title\n",
+    "        \n",
     "        #print(idx, type(a_tag), a_tag, song_title)\n",
     "        href_value = a_tag['href']\n",
-    "        print(href_value)"
+    "        #song id를 찾기 위한 정규표현식\n",
+    "        matched = re.search(r'(\\d+)\\);', href_value)\n",
+    "        if matched:\n",
+    "            song_id = matched.group(1)\n",
+    "            song_dict['song_id'] = song_id\n",
+    "            \n",
+    "            song_list.append(song_dict)\n",
+    "\n",
+    "song_list            "
    ]
   }
  ],
